tests/NormalTests/paczka1/small_fuzzy/31737408.err
Error in line 1: A104 A104 34,2
Error in line 5: rYdGEwk A104 89,2
